[gd_scene load_steps=8 format=3 uid="uid://cdnekj2tha05i"]

[ext_resource type="Script" path="res://items/bullets/base_arrow/arrow_base.gd" id="1_lv7sf"]
[ext_resource type="Texture2D" uid="uid://l0rxa20mjvta" path="res://z_materials/weapon/arrow_base.png" id="2_bgjqp"]
[ext_resource type="Script" path="res://states/finite_state_machine.gd" id="3_4j1sm"]
[ext_resource type="Script" path="res://items/bullets/base_arrow/state/arrow_collide.gd" id="5_bdhs1"]
[ext_resource type="Script" path="res://items/bullets/z_states/arrow_fire.gd" id="5_uc7xt"]
[ext_resource type="Script" path="res://items/bullets/z_states/arrow_out.gd" id="6_yjwk1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bqcfr"]
radius = 5.0

[node name="base" type="Area2D"]
z_index = -1
position = Vector2(-11, 0)
disable_mode = 1
collision_layer = 2
collision_mask = 60
gravity_space_override = 1
gravity = 3.0
script = ExtResource("1_lv7sf")
mass = null

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(43, 0)
shape = SubResource("CircleShape2D_bqcfr")

[node name="ArrowBase" type="Sprite2D" parent="."]
position = Vector2(31, -3.87431e-07)
rotation = 0.794359
scale = Vector2(1.41, 1.41)
texture = ExtResource("2_bgjqp")

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("3_4j1sm")
current_state = NodePath("Arrow_Fire")

[node name="Arrow_Fire" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("5_uc7xt")
actor = NodePath("../..")

[node name="Arrow_Out" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("6_yjwk1")
actor = NodePath("../..")

[node name="Arrow_Collide" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("5_bdhs1")
actor = NodePath("../..")

[connection signal="area_entered" from="." to="FiniteStateMachine/Arrow_Collide" method="_on_arrow_fire__collie_data"]
